records for invoice can be saved